--- a/calorieCounter/concertBookingform/styles.css
+++ b/calorieCounter/concertBookingform/styles.css
@@ -1,16 +1,21 @@
 :root {
-    --light-grey: #f5f6f7;
-    --dark-blue: #000000;
-    --nee-gold: #f68402ef;
-    --nee-dark: #040000;
-    --nee-darkb: #a95802ef;
+    --light-grey: #add8e6;
+    --purple-border: #9b51e0;
+    --nee-gold: #ffd700;
+    --nee-dark: #1a1a1a;
+    --nee-darkb: #8b4513;
 }
 
 .body{
+    box-sizing: border-box;
     font-family: "lato", Helvetica, Arial, sans-serif;
     font-size: 18px;
     background-color: var(--nee-dark);
     color: var(--nee-gold);
+}
+
+*:before, *:after{
+    box-sizing: border-box;
 }
 
 h1 {
@@ -22,11 +27,29 @@ h1 {
     max-width: 680px;
 }
 
+select{
+    width: 50%;
+    padding: 6px;
+    border-radius: 4px;
+    background-color: var(--purple-border);
+    color: #fff;
+    font-size: 17px;
+    font-weight: 600;
+}
+
+select option:hover{
+    background-color:#fff;
+    font-size: 18px;
+}
+
+select:active{
+    background-color: #fff;
+    color: #9b51e0;
+}
 button,
 input,
 select {
     min-height: 24px;
-    color: var(--nee-gold);
 }
 
 label,
@@ -35,21 +58,184 @@ legend {
 }
 
 fieldset,
-label,
 button,
-input,
 select {
     margin-bottom: 30px;
 }
 
-.hide {
+label{
+    align-items: center;
+    display: block;
+    font-size: 16px;
+}
+
+input,
+textarea{
+    width: 60%;
+    padding: 5px;
+    margin: 10px 20%;
+    border: 1px solid #eee;
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    transition: 2s box-shadow;
+    border-radius: 5px;
+    font-family: inherit;
+    font-size: inherit;
+}
+
+input:hover,
+textarea:hover{
+    box-shadow: 0 0 10px #9b51e0;
+}
+
+textarea{
+    resize: vertical;
+    min-height: 100px;
+    min-width: 60%;
+}
+
+input[type="checkbox"]{
+    margin: 0 10px 10px 5px;
+    cursor: pointer;
+    display: block;
+}
+
+.input p{
+    color: var(--light-grey);
+}
+
+.addition label{
+    position: relative;
+    margin-top: 5%;
+    padding-left: 30px;
+    cursor:pointer;
+}
+
+.addition label input[type="checkbox"]{
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.addition label span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    background-color: #ddd;
+    transition: .3s background-color;
+}
+
+.addition label span:after{
+    content: "";
+    position: absolute;
     display: none;
+    left: 6px;
+    top: 2px;
+    width: 7px;
+    height: 15px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
+}
+
+.addition label:hover span{
+    background-color: #ccc;
+}
+
+.addition label input:checked ~ span {
+    background-color: #2eaadc;
+}
+
+.addition label input:checked ~ span:after {
+    display: block;
 }
 
 button {
+    width: 20%;
+    min-height: 30px;
     outline: none;
     cursor: pointer;
     text-decoration: none;
-    background-color: var(--nee-gold);
-    border: 2px solid var(--nee-darkb);
+    font-weight: 600;
+    background-color: var(--purple-border);
+    color: #fff;
+    border: 2px solid #9b51e0;
+    border-radius: 5px;
+    margin: 20px 10px;
+}
+
+button:hover{
+    width:25%;
+    height:36px;
+}
+
+#calculate{
+    margin-left: 15%;
+}
+#calculate:focus,
+#calculate:active{
+    transition: .5s;
+    background-color: #fff;
+    color: #9b51e0;
+    border: 3px solid #9b51e0;
+}
+
+#clear{
+    background-color: #f00;
+    border: none;
+}
+#clear:focus{
+    transition: .5s;
+    background-color: #fff;
+    color: #f00;
+    border: 3px solid #f00;
+}
+
+#submit{
+    background-color:#2eaadc;
+    border: none;
+}
+#submit:focus{
+    transition: .5s;
+    background-color: #fff;
+    color: #2eaadc;
+    border: 3px solid #2eaadc;
+}
+
+.calculations{
+    border: none;
+}
+
+#hide{
+    /*display: none;*/
+    background-color:#f00;
+    width: 80%;
+    min-height: 200px;
+    margin: 0 10%;
+    padding: 10px;
+}
+
+.hide h1{
+    font-size: 16px;
+}
+
+.hidep{
+    display: inline-block;
+    position: absolute;
+}
+
+.invoice{
+    position: relative;
+    display: flex;
+    width: 100%;
+    min-height: 30px;
+    text-align:center;
+    padding: 2px;
+    background-color: #fff;
+}
+
+.invoice p{
+    position: absolute;
 }
